added global and theming styles for card and grid

--- a/frontend/src/styles/themes/dark-theme.scss
+++ b/frontend/src/styles/themes/dark-theme.scss
@@ -7,4 +7,7 @@
 // Tables
 @import "dark-theme-components/tables";
 
+// Card
+@import "dark-theme-components/card";
+// Dialog
 @import "dark-theme-components/dialog";
