--- a/frontend/src/app/layout/sidebar/sidebar.component.html
+++ b/frontend/src/app/layout/sidebar/sidebar.component.html
@@ -1,12 +1,20 @@
 <mat-list>
-    <div class="nested-sidebarItems" *ngFor="let sidebarmenuItem of sidebarmenuItems">
-        <mat-list-item class="list-items" *ngIf="!sidebarmenuItem.header" routerLink="/test">
-            <i class="material-icons">{{sidebarmenuItem.icon}}</i>
-            {{sidebarmenuItem.name}}
-        </mat-list-item>
-        <mat-list-item class="header-items" *ngIf="sidebarmenuItem.header">
-            <h4>{{sidebarmenuItem.header}}</h4>
-            {{sidebarmenuItem.name}}
-        </mat-list-item>
-    </div>
+  <div class="nested-sidebarItems" *ngFor="let sidebarmenuItem of sidebarmenuItems">
+    <mat-list-item class="list-items" *ngIf="!sidebarmenuItem.header && !sidebarmenuItem.disabled" routerLink="{{sidebarmenuItem.link}}" [routerLinkActive]="'is-active-list-item'">
+      <i class="material-icons">{{sidebarmenuItem.icon}}</i>
+      <p>{{sidebarmenuItem.name}}</p>
+    </mat-list-item>
+    <mat-list-item class="header-items" *ngIf="sidebarmenuItem.header && !sidebarmenuItem.disabled">
+      <h4>{{sidebarmenuItem.header}}</h4>
+      {{sidebarmenuItem.name}}
+    </mat-list-item>
+    <mat-list-item class="list-items disabled-header-item" *ngIf="!sidebarmenuItem.header && sidebarmenuItem.disabled" routerLink="{{sidebarmenuItem.link}}" [routerLinkActive]="'is-active-list-item'">
+      <i class="material-icons">{{sidebarmenuItem.icon}}</i>
+      <p>{{sidebarmenuItem.name}}</p>
+    </mat-list-item>
+    <mat-list-item class="header-items disabled-header-item" *ngIf="sidebarmenuItem.header && sidebarmenuItem.disabled">
+      <h4>{{sidebarmenuItem.header}}</h4>
+      {{sidebarmenuItem.name}}
+    </mat-list-item>
+  </div>
 </mat-list>
