Linking to detailview now works

--- a/frontend/src/app/modules/beer-collection/detail/beer-detail.component.html
+++ b/frontend/src/app/modules/beer-collection/detail/beer-detail.component.html
@@ -2,10 +2,10 @@
   <mat-grid-tile colspan="2" rowspan="2">
     <mat-card>
       <mat-card-header>
-        <mat-card-title>Beercollection</mat-card-title>
+        <mat-card-title>Single beer - name X</mat-card-title>
       </mat-card-header>
       <mat-card-content>
-        Here you will find the current beer collection, also add some if you please!
+        Lorem ipsum, beersum lotsum
       </mat-card-content>
     </mat-card>
   </mat-grid-tile>
