--- a/frontend/src/app/modules/beer-collection/overview/beer-collection.component.html
+++ b/frontend/src/app/modules/beer-collection/overview/beer-collection.component.html
@@ -7,6 +7,9 @@
       <mat-card-content>
         Here you will find the current beer collection, also add some if you please!
       </mat-card-content>
+      <mat-card-actions>
+        <button mat-raised-button color="primary" routerLink="detail/1">Naar Detail!</button>
+      </mat-card-actions>
     </mat-card>
   </mat-grid-tile>
 </mat-grid-list>
