--- a/frontend/src/app/modules/beer-collection/overview/beer-collection.component.html
+++ b/frontend/src/app/modules/beer-collection/overview/beer-collection.component.html
@@ -13,42 +13,40 @@
     </mat-card>
   </mat-grid-tile>
 
-  <mat-grid-tile colspan="10">
-    <!--    <div cdkScrollable class="scrollTable" style="height: 77vh; margin-top: 1rem">-->
-    <table mat-table [dataSource]="requests" class="mat-elevation-z8">
-      <!--- Note that these columns can be defined in any order.
-            The actual rendered columns are set as a property on the row definition" -->
+  <mat-grid-tile colspan="10" rowspan="3">
+    <div cdkScrollable class="scrollTable">
+      <table mat-table [dataSource]="beers" class="mat-elevation-z8">
 
-      <!-- SelectionBox Column -->
-      <ng-container matColumnDef="selectBox">
-        <th mat-header-cell *matHeaderCellDef></th>
-        <td mat-cell *matCellDef="let element">
-          <mat-checkbox color="primary" (change)="changeRowFocusState(element, $event)"></mat-checkbox>
-        </td>
-      </ng-container>
+        <!-- SelectionBox Column -->
+        <ng-container matColumnDef="selectBox">
+          <th mat-header-cell *matHeaderCellDef></th>
+          <td mat-cell *matCellDef="let element">
+            <mat-checkbox color="primary" (change)="changeRowFocusState(element, $event)"></mat-checkbox>
+          </td>
+        </ng-container>
 
-      <!-- customerNumber Column -->
-      <ng-container matColumnDef="importDate">
-        <th mat-header-cell *matHeaderCellDef> Datum</th>
-        <td mat-cell *matCellDef="let element" routerLink="detail/{{element.id}}"> {{element.date | date: 'dd-MM-yyyy'}}</td>
-      </ng-container>
+        <!-- customerNumber Column -->
+        <ng-container matColumnDef="importDate">
+          <th mat-header-cell *matHeaderCellDef> Naam</th>
+          <td mat-cell *matCellDef="let element" routerLink="detail/{{element.id}}"> {{element.name}}</td>
+        </ng-container>
 
-      <!-- Name Column -->
-      <ng-container matColumnDef="type">
-        <th mat-header-cell *matHeaderCellDef> Type</th>
-        <td mat-cell *matCellDef="let element" routerLink="detail/{{element.id}}"> {{element.type}} </td>
-      </ng-container>
+        <!-- Name Column -->
+        <ng-container matColumnDef="type">
+          <th mat-header-cell *matHeaderCellDef> Type</th>
+          <td mat-cell *matCellDef="let element" routerLink="detail/{{element.id}}"> {{element.type}} </td>
+        </ng-container>
 
 
-      <!-- Aantal Huisartsen Column -->
-      <ng-container matColumnDef="status">
-        <th mat-header-cell *matHeaderCellDef> Status</th>
-        <td mat-cell *matCellDef="let element" routerLink="detail/{{element.id}}"> {{element.status}} </td>
-      </ng-container>
+        <!-- Aantal Huisartsen Column -->
+        <ng-container matColumnDef="status">
+          <th mat-header-cell *matHeaderCellDef> Hoeveelheid</th>
+          <td mat-cell *matCellDef="let element" routerLink="detail/{{element.id}}"> {{element.quantity}} </td>
+        </ng-container>
 
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; let element; columns: displayedColumns;"></tr>
-    </table>
-    <!--    </div>-->
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; let element; columns: displayedColumns;"></tr>
+      </table>
+    </div>
   </mat-grid-tile>
 </mat-grid-list>
