--- a/frontend/src/styles/global-components/tables.scss
+++ b/frontend/src/styles/global-components/tables.scss
@@ -1,31 +1,25 @@
-.noSearch {
-  top: 0 !important;
-  right: 0 !important;
-  position: absolute !important;
-}
 
 h1 {
   margin: 1rem;
 }
 
 table {
-  position: absolute;
-  top: 0;
-  margin: 1em 0 0 0;
+  //margin: 1em 1em 0;
   width: 100%;
 }
 
+mat-paginator {
+  //margin: 0 1em;
+  //width: 98%;
+}
 
-.invitationLettersCard {
-  table {
-    width: 100%;
-    margin: 0;
-  }
+.beerCollectionTable {
+  margin: 1em;
 }
 
 .scrollTable {
   height: 70vh;
-  width: 100%;
+  //width: 100%;
 
   overflow: -moz-scrollbars-none;
   -ms-overflow-style: none;
@@ -40,32 +34,4 @@ table {
 
 .scrollTable::-webkit-scrollbar {
   width: 0;
-}
-
-.scroll-indicator-icon {
-  position: fixed !important;
-  right: 17em !important;
-  bottom: 0.25em !important;
-  font-size: 50px;
-  animation: bounce .5s alternate infinite ease-in;
-}
-
-.requestsTable {
-  width: 100% !important;
-  margin: 0 !important;
-
-  -webkit-box-shadow: none !important;
-  -moz-box-shadow: none !important;
-  box-shadow: none !important;
-}
-
-
-
-@keyframes bounce {
-  0% {
-    transform: translateY(5%);
-  }
-  100% {
-    transform: translateY(-5%);
-  }
 }
