--- a/frontend/src/app/modules/beer-collection/overview/beer-collection.component.html
+++ b/frontend/src/app/modules/beer-collection/overview/beer-collection.component.html
@@ -34,13 +34,13 @@
     <!-- Weight Column -->
     <ng-container matColumnDef="type">
       <th mat-header-cell *matHeaderCellDef> Weight </th>
-      <td mat-cell *matCellDef="let element"> {{element.type}} </td>
+      <td mat-cell *matCellDef="let element" routerLink="detail/{{element._id}}"> {{element.type}} </td>
     </ng-container>
 
     <!-- Symbol Column -->
     <ng-container matColumnDef="quantity">
       <th mat-header-cell *matHeaderCellDef> Symbol </th>
-      <td mat-cell *matCellDef="let element"> {{element.quantity}} </td>
+      <td mat-cell *matCellDef="let element" routerLink="detail/{{element._id}}"> {{element.quantity}} </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
