--- a/frontend/src/app/modules/beer-collection/overview/beer-collection.component.html
+++ b/frontend/src/app/modules/beer-collection/overview/beer-collection.component.html
@@ -27,19 +27,19 @@
 
     <!-- Name Column -->
     <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef> Name </th>
+      <th mat-header-cell *matHeaderCellDef> Name</th>
       <td mat-cell *matCellDef="let element" routerLink="detail/{{element._id}}"> {{element.name}} </td>
     </ng-container>
 
     <!-- Weight Column -->
     <ng-container matColumnDef="type">
-      <th mat-header-cell *matHeaderCellDef> Weight </th>
+      <th mat-header-cell *matHeaderCellDef> Weight</th>
       <td mat-cell *matCellDef="let element" routerLink="detail/{{element._id}}"> {{element.type}} </td>
     </ng-container>
 
     <!-- Symbol Column -->
     <ng-container matColumnDef="quantity">
-      <th mat-header-cell *matHeaderCellDef> Symbol </th>
+      <th mat-header-cell *matHeaderCellDef> Symbol</th>
       <td mat-cell *matCellDef="let element" routerLink="detail/{{element._id}}"> {{element.quantity}} </td>
     </ng-container>
 
@@ -49,3 +49,7 @@
 
   <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
 </div>
+
+<button (click)="openDialog()" class="createFAB" color="primary" mat-fab>
+  <mat-icon aria-hidden="false">add</mat-icon>
+</button>
