--- a/frontend/src/app/shared/dialog/dialog.component.html
+++ b/frontend/src/app/shared/dialog/dialog.component.html
@@ -1,19 +1,41 @@
 <mat-card>
   <mat-card-header>
-    <div mat-card-avatar class="example-header-image"></div>
-    <mat-card-title>Shiba Inu</mat-card-title>
-    <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+    <mat-card-title>Add beer</mat-card-title>
   </mat-card-header>
-  <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+  <!--  <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">-->
   <mat-card-content>
-    <p>
-      The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-      A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-      bred for hunting.
-    </p>
+    <form [formGroup]="generalFormGroup">
+
+      <!--          <mat-form-field>-->
+      <!--            <input matInput placeholder="Naam" formControlName="firstCtrl" required>-->
+      <!--          </mat-form-field>-->
+      <div class="inputRow">
+        <mat-form-field class="inputSpacing normalInput">
+          <input matInput placeholder="Naam" formControlName="title" required>
+        </mat-form-field>
+      </div>
+
+      <div class="inputRow">
+        <mat-form-field>
+          <mat-label>Type</mat-label>
+          <mat-select formControlName="quantity" required>
+            <mat-option *ngFor="let item of type" [value]="item.value" style="background-color: #484848; color: white">
+              {{item.display}}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+      </div>
+
+      <div class="inputRow">
+        <mat-form-field class="inputSpacing normalInput">
+          <input matInput placeholder="Aantal" formControlName="quantity" required>
+        </mat-form-field>
+      </div>
+
+    </form>
   </mat-card-content>
   <mat-card-actions>
-    <button mat-raised-button (click)="close()" class="btn addCard-button">Terug</button>
-    <button mat-raised-button (click)="close()" class="btn addCard-button">Toevoegen</button>
+    <button mat-button (click)="close()" class="btn addCard-button">Terug</button>
+    <button mat-raised-button color="primary" (click)="close()" class="btn addCard-button">Toevoegen</button>
   </mat-card-actions>
 </mat-card>
