--- a/frontend/src/styles/theme.scss
+++ b/frontend/src/styles/theme.scss
@@ -25,7 +25,7 @@ $mis-angular-frontend-theme: mat-light-theme($mis-angular-frontend-primary, $mis
 // that you are using.
 @include angular-material-theme($mis-angular-frontend-theme);
 
- //Dark Mode //
+//Dark Mode //
 
 $custom-primary: (
   main: #1565c0,
@@ -76,7 +76,7 @@ $custom-accent: (
   $dark-warn: mat-palette($mat-red);
   $dark-theme: mat-dark-theme($dark-primary, $dark-accent, $dark-warn);
 
-  @import "themes/dark-theme";
+  @import "themes/dark-theme.scss";
 
   @include angular-material-theme($dark-theme);
 }
