--- a/frontend/src/app/modules/beer-collection/overview/beer-collection.component.html
+++ b/frontend/src/app/modules/beer-collection/overview/beer-collection.component.html
@@ -28,7 +28,7 @@
     <!-- Name Column -->
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef> Name</th>
-      <td mat-cell *matCellDef="let element" routerLink="detail/{{element._id}}"> {{element.name}} </td>
+      <td mat-cell *matCellDef="let element" routerLink="detail/{{element._id}}"> {{element.title || element.name}} </td>
     </ng-container>
 
     <!-- Weight Column -->
@@ -47,7 +47,7 @@
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
 
-  <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+  <mat-paginator [pageSizeOptions]="[5, 10, 20, 30]" showFirstLastButtons></mat-paginator>
 </div>
 
 <button (click)="openDialog()" class="createFAB" color="primary" mat-fab>
